[gd_scene load_steps=9 format=3 uid="uid://d0ep1rl5ohb8s"]

[ext_resource type="Script" path="res://Main.gd" id="1"]
[ext_resource type="Script" path="res://DisplayHolder.gd" id="2_stkja"]
[ext_resource type="Script" path="res://CommandRunner.gd" id="5_bpnww"]
[ext_resource type="Script" path="res://FavoritesSaver.gd" id="6_lebg1"]
[ext_resource type="Script" path="res://FavoritesLoader.gd" id="7_1my4c"]
[ext_resource type="Script" path="res://DisplayCreator.gd" id="8_6so66"]
[ext_resource type="Script" path="res://EditCommandPopup.gd" id="8_ee45u"]
[ext_resource type="Script" path="res://SelectionManager.gd" id="8_j84m5"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1")

[node name="AddFavoriteDialogue" type="FileDialog" parent="."]
title = "Open a Directory"
size = Vector2i(452, 162)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
show_hidden_files = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="FileSearchEdit" type="LineEdit" parent="HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DisplayHolder" type="VBoxContainer" parent="HBoxContainer/Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_stkja")

[node name="Buttons" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.034
anchor_right = 0.5
anchor_bottom = 0.034
offset_left = -68.65
offset_right = 69.35
offset_bottom = 113.0
grow_horizontal = 2

[node name="AddFavoriteButton" type="Button" parent="HBoxContainer/Buttons/VBoxContainer"]
layout_mode = 2
text = "Add Favorite"

[node name="RemoveFavoriteButton" type="Button" parent="HBoxContainer/Buttons/VBoxContainer"]
layout_mode = 2
text = "Remove Favorite"

[node name="EditCommandButton" type="Button" parent="HBoxContainer/Buttons/VBoxContainer"]
layout_mode = 2
text = "Edit Command"

[node name="CommandRunner" type="Node" parent="."]
script = ExtResource("5_bpnww")
command = "explorer.exe"

[node name="DisplaySaver" type="Node" parent="."]
script = ExtResource("6_lebg1")

[node name="DisplayLoader" type="Node" parent="."]
script = ExtResource("7_1my4c")

[node name="DisplayCreator" type="Node" parent="."]
script = ExtResource("8_6so66")

[node name="SelectionManager" type="Node" parent="."]
script = ExtResource("8_j84m5")

[node name="EditCommandPopup" type="PopupPanel" parent="."]
initial_position = 2
title = "Edit Command"
size = Vector2i(200, 104)
borderless = false
script = ExtResource("8_ee45u")

[node name="VBoxContainer" type="VBoxContainer" parent="EditCommandPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="EditCommandPopup/VBoxContainer"]
layout_mode = 2
text = "Command:"

[node name="CommandLineEdit" type="LineEdit" parent="EditCommandPopup/VBoxContainer"]
layout_mode = 2

[node name="NewCommandConfirmButton" type="Button" parent="EditCommandPopup/VBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
size_flags_horizontal = 4
text = "OK"

[connection signal="dir_selected" from="AddFavoriteDialogue" to="." method="_on_add_favorite_dialogue_dir_selected"]
[connection signal="file_selected" from="AddFavoriteDialogue" to="." method="_on_AddFavoriteDialogue_file_selected"]
[connection signal="text_changed" from="HBoxContainer/Panel/VBoxContainer/FileSearchEdit" to="." method="_on_file_search_edit_text_changed"]
[connection signal="text_submitted" from="HBoxContainer/Panel/VBoxContainer/FileSearchEdit" to="." method="_on_file_search_edit_text_submitted"]
[connection signal="pressed" from="HBoxContainer/Buttons/VBoxContainer/AddFavoriteButton" to="." method="_on_add_favorite_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Buttons/VBoxContainer/RemoveFavoriteButton" to="." method="_on_remove_favorite_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Buttons/VBoxContainer/EditCommandButton" to="." method="_on_edit_command_button_pressed"]
[connection signal="command_changed" from="CommandRunner" to="." method="_on_command_runner_command_changed"]
[connection signal="new_command_set" from="EditCommandPopup" to="." method="_on_edit_command_popup_new_command_set"]
[connection signal="text_submitted" from="EditCommandPopup/VBoxContainer/CommandLineEdit" to="EditCommandPopup" method="_on_command_line_edit_text_submitted"]
[connection signal="pressed" from="EditCommandPopup/VBoxContainer/NewCommandConfirmButton" to="EditCommandPopup" method="_on_new_command_confirm_button_pressed"]
